--- a/templates/index.html
+++ b/templates/index.html
@@ -180,7 +180,7 @@
   <div class="block_title">S U B N E T</div>
 
   <div class="block_area">
-      <div class="block_area_in"> <big><b>Гор</b></big><br><br>
+      <div class="block_area_in"> <big><b>Город</b></big><br><br>
           Всего:
           <a href="https://user.subnet05.ru/oper/?core_section=task_list&filter_selector0=task_state&task_state0_value=996&filter_selector1=task_group&task_group1_value=10" style="color: white">{{areas[10][0]}}</a> <br>
           Выполнено:
@@ -190,7 +190,7 @@
           Без исполнителя:
           <a href="https://user.subnet05.ru/oper/?core_section=task_list&filter_selector0=task_state&task_state0_value=996&filter_selector1=task_group&task_group1_value=10&filter_selector2=task_staff&employee_find_input=&employee_id2=-1" style="color: white">{{areas[10][3]}}</a>
       </div>
-      <div class="block_area_in"> <big><b>Ред</b></big><br><br>
+      <div class="block_area_in"> <big><b>Редукторный</b></big><br><br>
           Всего:
           <a href="https://user.subnet05.ru/oper/?core_section=task_list&filter_selector0=task_state&task_state0_value=996&filter_selector1=task_group&task_group1_value=3" style="color: white">{{areas[3][0]}}</a> <br>
           Выполнено:
@@ -200,7 +200,7 @@
           Без исполнителя:
           <a href="https://user.subnet05.ru/oper/?core_section=task_list&filter_selector0=task_state&task_state0_value=996&filter_selector1=task_group&task_group1_value=3-&filter_selector2=task_staff&employee_find_input=&employee_id2=-1" style="color: white">{{areas[3][3]}}</a>
       </div>
-      <div class="block_area_in"> <big><b>Дем</b></big><br><br>
+      <div class="block_area_in"> <big><b>Демир</b></big><br><br>
           Всего:
           <a href="https://user.subnet05.ru/oper/?core_section=task_list&filter_selector0=task_state&task_state0_value=996&filter_selector1=task_group&task_group1_value=9" style="color: white">{{areas[9][0]}}</a> <br>
           Выполнено:
@@ -210,7 +210,7 @@
           Без исполнителя:
           <a href="https://user.subnet05.ru/oper/?core_section=task_list&filter_selector0=task_state&task_state0_value=996&filter_selector1=task_group&task_group1_value=9&filter_selector2=task_staff&employee_find_input=&employee_id2=-1" style="color: white">{{areas[9][3]}}</a>
       </div>
-      <div class="block_area_in"> <big><b>Гам</b></big><br><br>
+      <div class="block_area_in"> <big><b>Гамидова</b></big><br><br>
           Всего:
           <a href="https://user.subnet05.ru/oper/?core_section=task_list&filter_selector0=task_state&task_state0_value=996&filter_selector1=task_group&task_group1_value=4" style="color: white">{{areas[4][0]}}</a> <br>
           Выполнено:
@@ -220,7 +220,7 @@
           Без исполнителя:
           <a href="https://user.subnet05.ru/oper/?core_section=task_list&filter_selector0=task_state&task_state0_value=996&filter_selector1=task_group&task_group1_value=4&filter_selector2=task_staff&employee_find_input=&employee_id2=-1" style="color: white">{{areas[4][3]}}</a>
       </div>
-      <div class="block_area_in"> <big><b>Аку</b></big><br><br>
+      <div class="block_area_in"> <big><b>Акушинского</b></big><br><br>
           Всего:
           <a href="https://user.subnet05.ru/oper/?core_section=task_list&filter_selector0=task_state&task_state0_value=996&filter_selector1=task_group&task_group1_value=5" style="color: white">{{areas[5][0]}}</a> <br>
           Выполнено:
@@ -283,7 +283,7 @@
  <div class="hr-line"></div>
  {% endfor %}
  <br>
- <center><font color=#cccccc> © rt_fan </font></center>
+ <center><font color=#cccccc> © rt_fan {{time}} </font></center>
  <br>
  </body>
 </html>
