--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" http-equiv="Refresh" content="30">
   <title>Subnet Dashboard</title>
      <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
   <style>
