--- a/templates/index.html
+++ b/templates/index.html
@@ -114,7 +114,7 @@
                   Последняя заявка:
                 </div>
                 <div class="title_right_datetime">
-                  <!-- дата и время последней заявки -->
+                  <!-- дата и время последней выполненной заявки -->
                   {% if employees[master]['last_closed_request_time'] %}
                     {{employees[master]['last_closed_request_time']}}
                   {% else %}
