--- a/templates/index_js.html
+++ b/templates/index_js.html
@@ -1,240 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="utf-8" http-equiv="Refresh" content="30" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
-    />
-    <link rel="stylesheet" href="./static/css/style.css" />
-    <title>Subnet Информатор</title>
-    <link rel="shortcut icon" href="./static/favicon.ico" />
-  </head>
-  <body>
-    <div class="container">
-      <div class="main">
-        <div class="main_container">
-          <div class="header">
-            <img src="./static/img/spy.png" alt="" />
-            <h2>ИНФОРМАТОР</h2>
-          </div>
-
-          <div class="info">
-            Мастер не может выполнять одновременно больше одной заявки!
-          </div>
-
-          <!-- Основной контейнер для динамических данных -->
-          <div id="main-block"></div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" />
+  <link rel="stylesheet" href="./static/css/style.css" />
+  <title>Subnet Информатор</title>
+  <link rel="shortcut icon" href="./static/favicon.ico">
+</head>
+<body>
+  <div class="container">
+    <div class="main">
+      <div class="main_container">
+        <div class="header">
+          <img src="./static/img/spy.png" alt="" />
+          <h2>ИНФОРМАТОР</h2>
         </div>
-      </div>
-
-      <div class="footer">
-        <a href="https://github.com/rt-fan">rt_fan</a> ©
-        <span id="datetime-request"></span>
+        <div class="info">
+          Мастер не может выполнять одновременно больше одной заявки!
+        </div>
+        <div id="employeesContainer"></div>
       </div>
     </div>
+    <div class="footer">
+      <a href="https://github.com/rt-fan">rt_fan</a>&nbsp;© <span id="datetime_request"></span>
+    </div>
+  </div>
 
-    <script>
-      async function fetchData() {
-        try {
-          const response = await fetch("./data/data.json");
-          const data = await response.json();
-          renderData(data);
-        } catch (error) {
-          console.error("Error fetching data:", error);
-        }
-      }
+  <script>
+    async function fetchData() {
+      const response = await fetch("../data/data.json");
+      const data = await response.json();
+      updateContent(data);
+    }
 
-      function renderData(data) {
-        const mainBlock = document.getElementById("main-block");
-        const datetimeRequest = document.getElementById("datetime-request");
+    function updateContent(data) {
+      document.getElementById("datetime_request").textContent = data.datetime;
 
-        datetimeRequest.textContent = data.datetime_request;
-        mainBlock.innerHTML = data.employees
-          .map((employee) => {
-            const timesheetState = getTimesheetState(
-              employee.timesheet.work_state
-            );
-            return `
-          <div class="main_block">
-            <div class="block_title">
-              <div class="title_left">
-                <div class="title_left_name">${employee.name}</div>
-                <div class="title_left_state_${timesheetState.class}">${
-              timesheetState.label
-            }</div>
+      const container = document.getElementById("employeesContainer");
+      container.innerHTML = ""; // Очистить контейнер перед обновлением
+
+      for (const masterId in data.employees) {
+        const master = data.employees[masterId];
+        const employeeDiv = document.createElement("div");
+        employeeDiv.classList.add("main_block");
+
+        employeeDiv.innerHTML = `
+          <div class="block_title">
+            <div class="title_left">
+              <div class="title_left_name">${master.name}</div>
+              <div class="title_left_state_${
+                getStateClass(master.timesheet.work_state)
+              }">${getStateText(master.timesheet.work_state)}</div>
+            </div>
+            <div class="title_centr">
+              <div class="count_workday">
+                <div class="count_workday_description">РАБ</div>
+                <div class="count_workday_number">${master.timesheet.work_days}</div>
               </div>
-              <div class="title_centr">
-                <div class="title_left_days">
-                  <div class="count_workday">
-                    <div class="count_workday_description">РАБ</div>
-                    <div class="count_workday_number">${
-                      employee.timesheet.work_days
-                    }</div>
-                  </div>
-                  <div class="count_weekend">
-                    <div class="count_weekend_description">ВЫХ</div>
-                    <div class="count_weekend_number">${
-                      employee.timesheet.weekend_days
-                    }</div>
-                  </div>
-                </div>
-                <div class="title_left_count">
-                  <div class="count_assigned">
-                    <div class="count_assigned_description">НАЗ</div>
-                    <a href="${employee.page_url_open}" target="_blank">
-                      <div class="count_assigned_number">${
-                        employee.open_requests
-                      }</div>
-                    </a>
-                  </div>
-                  <div class="count_in_progress">
-                    <div class="count_in_progress_description">ИСП</div>
-                    <a href="${employee.page_url_in_progress}" target="_blank">
-                      <div class="count_in_progress_number">${
-                        employee.in_progress_requests
-                      }</div>
-                    </a>
-                  </div>
-                  <div class="count_completed">
-                    <div class="count_completed_description">ЗАК</div>
-                    <a href="${employee.page_url_close}" target="_blank">
-                      <div class="count_completed_number">${
-                        employee.closed_requests
-                      }</div>
-                    </a>
-                  </div>
-                  <div class="count_all_in_mount">
-                    <div class="count_all_in_mount_description">MEC</div>
-                    <a href="${employee.page_url_close_month}" target="_blank">
-                      <div class="count_all_in_mount_number">${
-                        employee.closed_month_requests
-                      }</div>
-                    </a>
-                  </div>
-                </div>
+              <div class="count_weekend">
+                <div class="count_weekend_description">ВЫХ</div>
+                <div class="count_weekend_number">${master.timesheet.weekend_days}</div>
               </div>
-              <div class="title_right">
-                <div class="title_right_description">Последняя заявка:</div>
-                <div class="title_right_datetime">${
-                  employee.last_closed_request_time || "Больше 3 дней"
-                }</div>
+              <div class="count_assigned">
+                <div class="count_assigned_description">НАЗ</div>
+                <a href="${master.page_url_open}" target="_blank">
+                  <div class="count_assigned_number">${master.open_requests}</div>
+                </a>
+              </div>
+              <div class="count_in_progress">
+                <div class="count_in_progress_description">ИСП</div>
+                <a href="${master.page_url_in_progress}" target="_blank">
+                  <div class="count_in_progress_number">${master.in_progress_requests}</div>
+                </a>
+              </div>
+              <div class="count_completed">
+                <div class="count_completed_description">ЗАК</div>
+                <a href="${master.page_url_close}" target="_blank">
+                  <div class="count_completed_number">${master.closed_requests}</div>
+                </a>
+              </div>
+              <div class="count_all_in_mount">
+                <div class="count_all_in_mount_description">MEC</div>
+                <a href="${master.page_url_close_month}" target="_blank">
+                  <div class="count_all_in_mount_number">${master.closed_month_requests}</div>
+                </a>
               </div>
             </div>
-            ${renderTasks(employee.in_progress_requests_details)}
-          </div>
-        `;
-          })
-          .join("");
-      }
-
-      function renderTasks(tasks) {
-        return tasks
-          .map(
-            (task) => `
-        <div class="block_tasks">
-          <div class="${
-            task.task_state ? "task_state_true" : "task_state_false"
-          }"></div>
-          <div class="tasks">
-            <div class="task_title">
-              <div class="task_title_left">
-                <div class="title_left_number">
-                  <a href="${task.task_url}" target="_blank"># ${
-              task.task_id
-            }</a>
-                </div>
-                <div class="title_left_deltatime">${task.task_deltatime}</div>
-              </div>
-              <div class="task_title_right">
-                <div class="title_right_description">Заявка назначена:</div>
-                <div class="title_right_date">${task.task_datetime}</div>
+            <div class="title_right">
+              <div class="title_right_description">Последняя заявка:</div>
+              <div class="title_right_datetime">
+                ${master.last_closed_request_time || "Больше 3 дней"}
               </div>
             </div>
-            <div class="task_type">${task.task_type}</div>
-            ${
-              task.task_subtype
-                ? `<div class="task_subtype">${task.task_subtype}</div>`
-                : ""
-            }
-            ${renderTaskInfo(task)}
-          </div>
-        </div>
-      `
-          )
-          .join("");
-      }
+          </div>`;
 
-      function renderTaskInfo(task) {
-        return task.task_login_biling ||
-          task.task_login_oper ||
-          task.task_name_biling ||
-          task.task_name_oper ||
-          task.task_address_biling ||
-          task.task_address_oper
-          ? `
-        <div class="task_info">
-          <div class="task_info_login">
-            <div class="login_description">Логин:</div>
-            ${
-              task.task_login_biling
-                ? `<div class="login_biling"><i>Б:</i> ${task.task_login_biling}</div>`
-                : ""
-            }
-            ${
-              task.task_login_oper
-                ? `<div class="login_operator"><i>О:</i> ${task.task_login_oper}</div>`
-                : ""
-            }
-          </div>
-          <div class="task_info_name">
-            <div class="name_description">ФИО:</div>
-            ${
-              task.task_name_biling
-                ? `<div class="name_biling"><i>Б:</i> ${task.task_name_biling}</div>`
-                : ""
-            }
-            ${
-              task.task_name_oper
-                ? `<div class="name_operator"><i>О:</i> ${task.task_name_oper}</div>`
-                : ""
-            }
-          </div>
-          <div class="task_info_address">
-            <div class="address_description">Адрес:</div>
-            ${
-              task.task_address_biling
-                ? `<div class="address_biling"><i>Б:</i> ${task.task_address_biling}</div>`
-                : ""
-            }
-            ${
-              task.task_address_oper
-                ? `<div class="address_operator"><i>О:</i> ${task.task_address_oper}</div>`
-                : ""
-            }
-          </div>
-        </div>
-      `
-          : "";
+        container.appendChild(employeeDiv);
       }
+    }
 
-      function getTimesheetState(workState) {
-        const states = {
-          "-1": { class: "notwork", label: "не записан" },
-          994: { class: "work", label: "дежурство" },
-          995: { class: "weekend", label: "не вышел" },
-          996: { class: "weekend", label: "отпуск" },
-          997: { class: "weekend", label: "выходной" },
-          998: { class: "weekend", label: "больничный" },
-          999: { class: "weekend", label: "командировка" },
-        };
-        return states[workState] || { class: "work", label: "на работе" };
+    function getStateClass(state) {
+      switch(state) {
+        case -1: return "notwork";
+        case 994: return "work";
+        case 995: return "weekend";
+        case 996: return "weekend";
+        case 997: return "weekend";
+        case 998: return "weekend";
+        case 999: return "weekend";
+        default: return "work";
       }
+    }
 
-      fetchData();
-    </script>
-  </body>
+    function getStateText(state) {
+      switch(state) {
+        case -1: return "не записан";
+        case 994: return "дежурство";
+        case 995: return "не вышел";
+        case 996: return "отпуск";
+        case 997: return "выходной";
+        case 998: return "больничный";
+        case 999: return "командировка";
+        default: return "на работе";
+      }
+    }
+
+    // Начальная загрузка данных
+    fetchData();
+    // Обновление данных каждые 5 секунд
+    setInterval(fetchData, 5000);
+  </script>
+</body>
 </html>
